navigation.scss fix for li spacing took out position absolute

--- a/web/themes/custom/myusf/sass/src/partials/_navigation.scss
+++ b/web/themes/custom/myusf/sass/src/partials/_navigation.scss
@@ -1189,7 +1189,7 @@ button.navbar-toggler.navbar-toggler-right.collapsed{
 				font-weight:600;
 
 				&:after {
-				    position: absolute;
+				    /*position: absolute;*/
 				    content: "»";
 				    padding-left: 3px;
 				}
